# mewjson

./: .clang-format  CMakeLists.txt  LICENSE  README.md  mewjson.c  mewjson.h
.github/workflows/: ci.yml
fuzz/: CMakeLists.txt  fuzz.c  fuzz.dict  seed.sh
test/: CMakeLists.txt  test.c  test.h  test_document.c  test_read_write.c
